@@ -4,7 +4,12 @@ Carlos Rueda - MMI / MBARI
 ChangeLog
 
 2008-11-10
-	- Rule added: (a.2) Return an OWL document if outForm="owl" or "rdf"
+	- Rule added: (a.2) an OWL document if is the user-agent is "Java/*"
+		This is a workaround for the following situation in VINE:
+		The underlying Jena library should include the accept element:
+		"application/rdf+xml" but it's not doing so, see bug:
+		   Wrong Accept-Header in HTTP-Connections - ID: 1424091
+		   http://sourceforge.net/tracker2/?func=detail&aid=1424091&group_id=40417&atid=430288
 	
 	
 2008-11-04
